--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -36,6 +36,7 @@
     <script src="lib/angular/js/angular-resource.js"></script>
     <script src="lib/angular/js/angular-ui-router.js"></script>
     <script src="lib/angular/js/angular-ui-bootstrap-tpls.js"></script>
+    <script src="lib/angular/js/angular-messages.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
