Add a modal when deleting a record

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/modal.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -37,6 +38,8 @@
     <script src="lib/angular/js/angular-ui-router.js"></script>
     <script src="lib/angular/js/angular-ui-bootstrap-tpls.js"></script>
     <script src="lib/angular/js/angular-messages.js"></script>
+    <script src="lib/angular/js/angular-sanitize.js"></script>
+    <script src="lib/angular/js/dialogs.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
