--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -40,6 +40,7 @@
     <script src="lib/angular/js/angular-messages.js"></script>
     <script src="lib/angular/js/angular-sanitize.js"></script>
     <script src="lib/angular/js/dialogs.min.js"></script>
+    <script src="lib/angular/js/angular-file-model.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
